[package]
name = "kitsune"
version = "0.1.0"
authors = ["brettkolodny <brettkolodny@gmail.com>"]
edition = "2018"
description = "A CLI for generating fake progress bars in various styles that take a set amount of time to finish."
repository = "https://github.com/brettkolodny/kitsune"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"


[dependencies]
indicatif = "0.11.0"
structopt = "0.2.18"
rand = "0.7.0"
console = "0.7.7"
